fix: display an accurate number of total hits for search (#1716)
* fix: track total hits when doing an elastic search query to get an accurate number of total hits, cleanup

* add null check due to mocks in unit tests

* move maxResultWindow initialization to application event listener